--- a/themes/vex-hugo/layouts/partials/banner.html
+++ b/themes/vex-hugo/layouts/partials/banner.html
@@ -6,12 +6,13 @@
 <section class="section">
 	<div class="container">
 		<div class="row">
-			<div class="col-md-6 text-center mb-5 mb-md-0">
+			<div class="col-md-3 text-center mb-5 mb-md-0">
 				<img class="img-fluid" src="{{ .image | absURL }}" alt="">
 			</div>
-			<div class="col-md-6 align-self-center text-center text-md-left">
+			<div class="col-md-9 align-self-center text-center text-md-left">
 				<div class="block">
-					<h1 class="font-weight-bold mb-4 font-size-60">{{ .title | markdownify }}</h1>
+					<h1 class="font-weight-bold mb-4 font-size-58
+					">{{ .title | markdownify }}</h1>
 					<p class="mb-4">{{ .content | markdownify }}</p>
 					{{ if .button.enable }}
 					{{ with .button }}
