--- a/themes/vex-hugo/assets/scss/style.scss
+++ b/themes/vex-hugo/assets/scss/style.scss
@@ -209,8 +209,8 @@ a:active {
   font-size: 18px;
   padding: 15px 40px;
   display: inline-block;
-  background-color: $primary-color;
-  box-shadow: 0 15px 15px rgba(128, 0, 0, 0.5);
+  background-color: red;
+  box-shadow: 0 15px 15px rgba(255, 0, 0, 0.5);
   background-image: linear-gradient(bottom, rgba(207, 239, 206, 0) 0%, rgba(255, 239, 206, 0.25) 100%);
 
   &:hover,
